--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -21,37 +21,54 @@ eleventyNavigation:
       <p>With over two decades of experience, I can integrate quickly with your team if needed, and you can expect high quality, <strong>effective</strong> content, <strong>clean</strong> designs and <strong>fast</strong> pages that will <strong>last</strong>.</p>
     </div>
 
-<div class="rs-column-main rs-colour-lowlight">
+    <div class="rs-sidebar-container">
+      <div class="rs-column-main rs-colour-lowlight rs-projects-example">
 
-    <h2>Example projects</h2>
+        <h2>Example projects</h2>
 
-    <h3 class="rs-colour-text-highlight-shade">E&#8209;LEARNING: UAS A1+A3 &amp; UAS A2</h3>
+        <h3 id="elearning" class="rs-colour-text-highlight-shade">E&#8209;LEARNING: UAS A1+A3 &amp; UAS A2</h3>
 
-    <img class="rs-column-main-breakout rs-project-example-hero" src="_shared/images/uas-a2-hero.png" alt="A screenshot of the welcome page for the UAS A2 course.">
+        <img class="rs-column-main-breakout rs-project-example-hero" src="_shared/images/uas-a2-hero.png" alt="A screenshot of the welcome page for the UAS A2 course.">
 
-    <p>Flying a drone in Europe now requires pilots to take an online training course then pass a theoretical exam. A partnership between the <a href="https://dac.gouvernement.lu/" target="_blank">Direction de l'Aviation Civile of Luxembourg</a> (DAC) and the <a href="https://www.eurocontrol.int/" target="_blank">EUROCONTROL</a> <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Aviation Learning Centre</a> engaged me to work with their teams to storyboard, design and build a pair of multilingual courses to meet this requirement.</p>
+        <p>Flying a drone in Europe now requires pilots to take an online training course then pass a theoretical exam. A partnership between the <a href="https://dac.gouvernement.lu/" target="_blank">Direction de l'Aviation Civile of Luxembourg</a> (DAC) and the <a href="https://www.eurocontrol.int/" target="_blank">EUROCONTROL</a> <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Aviation Learning Centre</a> engaged me to work with their teams to storyboard, design and build a pair of multilingual courses to meet this requirement.</p>
 
-    <p>Both courses were a <strong>huge success</strong>, consistently delivering the <strong>highest learner numbers</strong> across the platform. By registering with the <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Learning Zone</a>, you can view the <a href="https://learningzone.eurocontrol.int/ilp/pages/catalogsearch.jsf?catalogId=1700&menuId=1108&locale=en-GB&showbundlekeys=false&sidebarExpanded=true&q=%7B!q.op%3DAND%7D%20UAS-OPEN-A1%2BA3&rows=1" target="_blank">UAS A1+A3</a> and <a href="https://learningzone.eurocontrol.int/ilp/pages/catalogsearch.jsf?catalogId=1700&menuId=1108&locale=en-GB&showbundlekeys=false&sidebarExpanded=true&q=%7B!q.op%3DAND%7D%20UAS-OPEN-A2-COURSE&rows=1" target="_blank">UAS A2 Open</a> courses for free.</p>
+        <p>Both courses were a <strong>huge success</strong>, consistently delivering the <strong>highest learner numbers</strong> across the platform. By registering with the <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Learning Zone</a>, you can view the <a href="https://learningzone.eurocontrol.int/ilp/pages/catalogsearch.jsf?catalogId=1700&menuId=1108&locale=en-GB&showbundlekeys=false&sidebarExpanded=true&q=%7B!q.op%3DAND%7D%20UAS-OPEN-A1%2BA3&rows=1" target="_blank">UAS A1+A3</a> and <a href="https://learningzone.eurocontrol.int/ilp/pages/catalogsearch.jsf?catalogId=1700&menuId=1108&locale=en-GB&showbundlekeys=false&sidebarExpanded=true&q=%7B!q.op%3DAND%7D%20UAS-OPEN-A2-COURSE&rows=1" target="_blank">UAS A2 Open</a> courses for free.</p>
 
-    <h3><em>IMC LMS Customisation</em>: KPI panel</h3>
+        <h3 id="imc" class="rs-colour-text-highlight-shade">IMC LMS CUSTOMISATION: KPI panel</h3>
 
-    <p>The <a href="https://www.eurocontrol.int/" target="_blank">EUROCONTROL</a> <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Aviation Learning Centre</a> wanted to promote their Learning Zone KPI statistics showing how popular the platform is. The <strong>responsive dashboard panel</strong> I built into the Learning Zone home page received loads of positive feedback for being both eye&#8209;catching and functional!</p>
+        <img class="rs-column-main-breakout rs-project-example-hero" src="_shared/images/lz-panel-kpi.jpg" alt="A responsive panel showing KPI statistics and a rotating 3D globe with current visitor locations plotted by country flag.">
 
-    <h3><em>UI &amp; Applications</em>: ACE</h3>
+        <p class="rs-colour-instruction">Select the image above to view  a video of the animations.</p>
 
-    <p>The training staff at <a href="https://www.eurocontrol.int/" target="_blank">EUROCONTROL</a> <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Aviation Learning Centre</a> were using several outdated applications and reports to manage courses. I was tasked with building a single integrated application front end to modernise and bring all the tools together. After conducting <strong>requirement interviews</strong> and <strong>prototype workshops</strong>, the resulting application has simplified the workflow for all training staff. It only uses <strong>vanilla JavaScript</strong>, resulting in a low maintenance tool!</p>
+        <p>The <a href="https://www.eurocontrol.int/" target="_blank">EUROCONTROL</a> <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Aviation Learning Centre</a> wanted to promote their Learning Zone KPI statistics showing how popular the platform is. The <strong>responsive dashboard panel</strong> I built into the Learning Zone home page received loads of positive feedback for being both eye&#8209;catching and functional!</p>
 
-    <h3><em>Websites</em>: Mid-Argyll Rugby Football Club</h3>
+        <h3 id="ui" class="rs-colour-text-highlight-shade">UI &amp; APLICATIONS: ACE</h3>
 
-    <p>We are lucky to have a brilliant local rugby club that runs training sessions for all age groups. I built their website for free as a wee payback to the great volunteers who put so much of their own time into running things.</p>
+        <img class="rs-column-main-breakout rs-project-example-hero"  src="_shared/images/lz-ace.png" alt="A complex User Interface for the ACE application built using web components and vanilla JavaScript.">
+
+        <p>The training staff at <a href="https://www.eurocontrol.int/" target="_blank">EUROCONTROL</a> <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Aviation Learning Centre</a> were using several outdated applications and reports to manage courses. I was tasked with building a single integrated application front end to modernise and bring all the tools together. After conducting <strong>requirement interviews</strong> and <strong>prototype workshops</strong>, the resulting application has simplified the workflow for all training staff. It only uses <strong>vanilla JavaScript</strong>, resulting in a low maintenance tool!</p>
+
+        <h3 id="websites" class="rs-colour-text-highlight-shade">WEBSITES: Mid-Argyll Rugby Football Club</h3>
+
+        <img class="rs-column-main-breakout rs-project-example-hero" src="_shared/images/marfc-home.png" alt="A screenshot of the website homepage.">
+
+
+
+
+        <p>We are lucky to have a brilliant local rugby club that runs training sessions for all age groups. I built their website for free as a wee payback to the great volunteers who put so much of their own time into running things.</p>
+      </div>
+
+      <div class="rs-sidebar">
+
+        <h2>How I work</h2>
+
+        <p>Surfing the web can be a <strong>horrible experience</strong> these days. Websites prioritise advertising and 'engagement' over visitor experience (think pop&#8209;ups, cookie warnings, intrusive adverts, page loading spinners… the list goes on).</p>
+
+        <p>I have a different <strong>philosophy</strong>. Give visitors a good experience and 'engagement' will happen naturally. Load pages fast. Let visitors find and understand what they need, quickly.</p>
+
+        <p>I also believe in giving you <strong>full control</strong> over your content and your website. If this sounds good to you, <a href="contact/">get in touch</a>.</p>
+
     </div>
-
-    <h2>How I work</h2>
-
-    <p>Surfing the web can be a <strong>horrible experience</strong> these days. Websites prioritise advertising and 'engagement' over visitor experience (think pop-ups, cookie warnings, intrusive adverts, page loading spinners… the list goes on).</p>
-
-    <p>I have a different <strong>philosophy</strong>. Give visitors a good experience and 'engagement' will happen naturally. Load pages fast. Let visitors find and understand what they need, quickly.</p>
-
-    <p>I also believe in giving you <strong>full control</strong> over your content and your website. If this sounds good to you, <a href="contact/">get in touch</a>.</p>
+  </div>
 
 </article>
