--- a/website-source/_shared/css/brand.css
+++ b/website-source/_shared/css/brand.css
@@ -495,6 +495,7 @@ nav>ul>li.is-active>a {}
 
 .rs-full-height {
     display: grid;
+    position: relative;
     grid-template-rows: auto 1fr auto;
     grid-template-columns: 100%;
     min-height: 100vh;
@@ -613,6 +614,20 @@ h3.rs-colour-text-highlight-shade {
     margin-block-end: var(--space-m);
 }
 
+/*
+ ######     ###    ##    ##    ##     ## ######## ##       ##        #######
+##    ##   ## ##    ##  ##     ##     ## ##       ##       ##       ##     ##
+##        ##   ##    ####      ##     ## ##       ##       ##       ##     ##
+ ######  ##     ##    ##       ######### ######   ##       ##       ##     ##
+      ## #########    ##       ##     ## ##       ##       ##       ##     ##
+##    ## ##     ##    ##       ##     ## ##       ##       ##       ##     ##
+ ######  ##     ##    ##       ##     ## ######## ######## ########  #######
+*/
+
+.rs-say-hello-container {
+    background-color: var(--rs-colour-highlight);
+    color: var(--rs-colour-bg-shade);
+}
 
 /*
 ########  #######   #######  ######## ######## ########
@@ -624,4 +639,19 @@ h3.rs-colour-text-highlight-shade {
 ##        #######   #######     ##    ######## ##     ##
 */
 
-footer {}
+/* footer {
+    padding-inline: var(--rs-layout-left-shift);
+    padding-block-end: var(--space-xl);
+    max-width: var(--rs-layout-main-max-width);
+}
+
+
+
+@media screen and (min-width: 1700px) {
+    footer {
+        position: absolute;
+        bottom: 0;
+        left: 79rem;
+        max-width: 30rem;
+    }
+} */
