--- a/website-source/contact/index.njk
+++ b/website-source/contact/index.njk
@@ -5,7 +5,7 @@ eleventyNavigation:
   key: contact
   order: 2
 ---
-
+<div class="rs-column-main">
 <h1>Say hello!</h1>
 
 <p>I'm always delighted to hear from new people with projects of any size. </p>
@@ -28,3 +28,5 @@ eleventyNavigation:
       <textarea id="message" name="message" required="" rows="10"></textarea>
   </div>
 </form>
+
+</div>
