--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -28,7 +28,9 @@ eleventyNavigation:
 
         <h3 id="elearning" class="rs-colour-text-highlight-shade">E&#8209;LEARNING: UAS A1+A3 &amp; UAS A2</h3>
 
-        <img class="rs-column-main-breakout rs-project-example-hero" src="_shared/images/uas-a2-hero.png" alt="A screenshot of the welcome page for the UAS A2 course.">
+        <div class="rs-column-main-breakout rs-image-effect">
+          <img class="rs-project-example-hero" src="_shared/images/uas-a2-hero.png" alt="A screenshot of the welcome page for the UAS A2 course.">
+        </div>
 
         <p>Flying a drone in Europe now requires pilots to take an online training course then pass a theoretical exam. A partnership between the <a href="https://dac.gouvernement.lu/" target="_blank">Direction de l'Aviation Civile of Luxembourg</a> (DAC) and the <a href="https://www.eurocontrol.int/" target="_blank">EUROCONTROL</a> <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Aviation Learning Centre</a> engaged me to work with their teams to storyboard, design and build a pair of multilingual courses to meet this requirement.</p>
 
@@ -36,26 +38,31 @@ eleventyNavigation:
 
         <h3 id="imc" class="rs-colour-text-highlight-shade">IMC LMS CUSTOMISATION: KPI panel</h3>
 
-        <img class="rs-column-main-breakout rs-project-example-hero" src="_shared/images/lz-panel-kpi.jpg" alt="A responsive panel showing KPI statistics and a rotating 3D globe with current visitor locations plotted by country flag.">
+  <div class="rs-column-main-breakout rs-image-effect">
+        <img class="rs-project-example-hero" src="_shared/images/lz-panel-kpi.jpg" alt="A responsive panel showing KPI statistics and a rotating 3D globe with current visitor locations plotted by country flag.">
+        </div>
 
         <p class="rs-colour-instruction">Select the image above to view  a video of the animations.</p>
 
         <p>The <a href="https://www.eurocontrol.int/" target="_blank">EUROCONTROL</a> <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Aviation Learning Centre</a> wanted to promote their Learning Zone KPI statistics showing how popular the platform is. The <strong>responsive dashboard panel</strong> I built into the Learning Zone home page received loads of positive feedback for being both eye&#8209;catching and functional!</p>
 
         <h3 id="ui" class="rs-colour-text-highlight-shade">UI &amp; APLICATIONS: ACE</h3>
-
-        <img class="rs-column-main-breakout rs-project-example-hero"  src="_shared/images/lz-ace.png" alt="A complex User Interface for the ACE application built using web components and vanilla JavaScript.">
+        <div class="rs-column-main-breakout rs-image-effect">
+          <img class="rs-project-example-hero"  src="_shared/images/lz-ace.png" alt="A complex User Interface for the ACE application built using web components and vanilla JavaScript.">
+        </div>
 
         <p>The training staff at <a href="https://www.eurocontrol.int/" target="_blank">EUROCONTROL</a> <a href="https://learningzone.eurocontrol.int/ilp/" target="_blank">Aviation Learning Centre</a> were using several outdated applications and reports to manage courses. I was tasked with building a single integrated application front end to modernise and bring all the tools together. After conducting <strong>requirement interviews</strong> and <strong>prototype workshops</strong>, the resulting application has simplified the workflow for all training staff. It only uses <strong>vanilla JavaScript</strong>, resulting in a low maintenance tool!</p>
 
         <h3 id="websites" class="rs-colour-text-highlight-shade">WEBSITES: Mid-Argyll Rugby Football Club</h3>
 
-        <img class="rs-column-main-breakout rs-project-example-hero" src="_shared/images/marfc-home.png" alt="A screenshot of the website homepage.">
+        <div class="rs-column-main-breakout rs-image-effect">
+          <img class="rs-project-example-hero" style="object-position: center top;" src="_shared/images/marfc-home.png" alt="A screenshot of the website homepage.">
+        </div>
+
+        <p class="rs-colour-instruction">Unfortunately, the club let a payment lapse by mistake so the site is down. It should be up again soon.</p>
 
 
-
-
-        <p>We are lucky to have a brilliant local rugby club that runs training sessions for all age groups. I built their website for free as a wee payback to the great volunteers who put so much of their own time into running things.</p>
+        <p>We are lucky to have a brilliant local rugby club that runs training sessions for all age groups. <a href="mid-argyll-rfc.com" target="_blank">I built their website</a> for free as a wee payback to the great volunteers who put so much of their own time into running things.</p>
       </div>
 
       <div class="rs-sidebar">
