--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -2,6 +2,7 @@
 title: Rising Sky
 layout: base
 cssFiles: ["/index.css"]
+jsFiles: ["/_shared/js/lite-vimeo-embed.js", "/index.js"]
 eleventyNavigation:
   key: home
   order: 1
@@ -38,8 +39,8 @@ eleventyNavigation:
 
         <h3 id="imc" class="rs-colour-text-highlight-shade">IMC LMS CUSTOMISATION: KPI panel</h3>
 
-  <div class="rs-column-main-breakout rs-image-effect">
-        <img class="rs-project-example-hero" src="_shared/images/lz-panel-kpi.jpg" alt="A responsive panel showing KPI statistics and a rotating 3D globe with current visitor locations plotted by country flag.">
+        <div class="rs-column-main-breakout rs-image-effect">
+          <img id="rsHeroKPIPanel" class="rs-project-example-hero" style="height:auto; aspect-ratio: 1279 / 379 !important;" src="_shared/images/lz-panel-kpi.jpg" alt="A responsive panel showing KPI statistics and a rotating 3D globe with current visitor locations plotted by country flag.">
         </div>
 
         <p class="rs-colour-instruction">Select the image above to view  a video of the animations.</p>
@@ -62,7 +63,7 @@ eleventyNavigation:
         <p class="rs-colour-instruction">Unfortunately, the club let a payment lapse by mistake so the site is down. It should be up again soon.</p>
 
 
-        <p>We are lucky to have a brilliant local rugby club that runs training sessions for all age groups. <a href="mid-argyll-rfc.com" target="_blank">I built their website</a> for free as a wee payback to the great volunteers who put so much of their own time into running things.</p>
+        <p>We are lucky to have a brilliant local rugby club that runs training sessions for all age groups. <a href="https://mid-argyll-rfc.com" target="_blank">I built their website</a> for free as a wee payback to the great volunteers who put so much of their own time into running things.</p>
       </div>
 
       <div class="rs-sidebar">
