--- a/website-source/licence.njk
+++ b/website-source/licence.njk
@@ -3,11 +3,10 @@ title: Licence
 layout: base
 ---
 
-<div class="rs-column-header-wide">
-  <h1>Licence</h1>
-</div>
 
-<article class="rs-column flow">
+
+<article class="rs-column-main">
+  <h1>Licence</h1>
 
   <p>The MIT License (MIT)</p>
   <p>Copyright © 2024 Patrick Grey</p>
