Contact form finished

--- a/_back-end/_components/footer.njk
+++ b/_back-end/_components/footer.njk
@@ -8,7 +8,7 @@
   <div class="rs-column-main rs-colour-lowlight">
     <div class="rs-say-hello-container">
       {% if (urlArray[1] == "contact") %}
-        <p class="rs-mbs-0">Contact text here</p>
+        <p class="rs-mbs-0">If you have landed on this page and want to know more about my work, <a href="/">check out the projects</a> on the home page!</p>
       {% else %}
         <p class="rs-mbs-0">
           <a class="rs-link-button" href="contact/">Say hello!</a>
