--- a/website-source/contact/index.njk
+++ b/website-source/contact/index.njk
@@ -5,14 +5,14 @@ eleventyNavigation:
   key: contact
   order: 2
 ---
-<div class="rs-column-main">
+<div class="rs-column-main rs-column-contact">
 <h1>Say hello!</h1>
 
 <p>I'm always delighted to hear from new people with projects of any size. </p>
 
 <p>If you think I can help, send me an email to <code>patrick@risingsky.co.uk</code> or use the form below to send me a message. It's helpful to describe what the project is about and any other aspects like deadlines and budget.</p>
 
-<form action="#" method="POST">
+<form action="#" method="POST" class="rs-form-contact">
   <div>
       <label for="name">Name</label>
       <input type="text" id="name" name="name" required>
@@ -27,6 +27,8 @@ eleventyNavigation:
       <label for="message">About your project</label>
       <textarea id="message" name="message" required="" rows="10"></textarea>
   </div>
+
+  <button>Send</button>
 </form>
 
 </div>
