--- a/website-source/index.njk
+++ b/website-source/index.njk
@@ -2,7 +2,7 @@
 title: Rising Sky
 layout: base
 cssFiles: ["/index.css"]
-jsFiles: ["/_shared/js/lite-vimeo-embed.js", "/index.js"]
+jsFiles: ["/_shared/js/lite-vimeo-embed.js", "/index.js", "/video.js"]
 eleventyNavigation:
   key: home
   order: 1
