Toggle button added

--- a/_back-end/_layouts/base.njk
+++ b/_back-end/_layouts/base.njk
@@ -99,12 +99,18 @@ jsFiles: []
                 <div class="rs-logo-container">
                     <a href="/" class="rs-logo">
                         <span class="visually-hidden">Go to the home page.</span>{% include "../../website-source/_shared/images/logo/rising-sky-logo.svg" %}</a>
-                        <button class="rs-animation-cloud-control">
-                            <span class="visually-hidden rs-animation-pause">pause cloud animation</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentcolor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                        <button class="rs-animation-cloud-control" data-playing>
+                            <span class="visually-hidden rs-animation-pause">toggle cloud animation</span>
+
+                            <svg data-pause xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentcolor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                 <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
                                 <path d="M9 4h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h2a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2z" stroke-width="0" fill="currentColor" />
                                 <path d="M17 4h-2a2 2 0 0 0 -2 2v12a2 2 0 0 0 2 2h2a2 2 0 0 0 2 -2v-12a2 2 0 0 0 -2 -2z" stroke-width="0" fill="currentColor" />
+                            </svg>
+
+                            <svg data-play xmlns="http://www.w3.org/2000/svg" style="display:none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentcolor" fill="none" stroke-linecap="round" stroke-linejoin="round">
+                                <path stroke="none" d="M0 0h24v24H0z" fill="none"/>
+                                <path d="M6 4v16a1 1 0 0 0 1.524 .852l13 -8a1 1 0 0 0 0 -1.704l-13 -8a1 1 0 0 0 -1.524 .852z" stroke-width="0" fill="currentColor" />
                             </svg>
                         </button>
                 </div>
